Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-06-14 (SVN):
    * Revamped engine pathname handling: fs_gamedir, fs_userdir and
      fs_basedir are not global anymore. All function needing to make a
      path string using them now go through the new FS helper functions
      FS_MakePath, FS_MakePath_VA, FS_MakePath_BUF, FS_MakePath_VABUF,
      and the macros from filenames.h are now used everywhere.

2012-06-14 (SVN):
    * snd_sys.c: Moved registeration of AHI before SDL, so that SDL is
      still the default for Amigas.

2012-06-14 (SVN):
    * utils dcc/hcc.c, hcc/hcc.c, maputils/qbsp.c, texutils/bsp2wal.c:
      Revised filenames.h macro usage.
    * utils pak/pakx.c: Used filenames.h macros.

2012-06-14 (SVN):
    * utils/common/util_io.c: Fixed CreatePath() for DRIVE_SPEC and made
      it to use filenams.h macros.

2012-06-14 (SVN):
    * libs/common/filenames.h: Added HAS_DRIVE_SPEC and STRIP_DRIVE_SPEC
      macros.

2012-06-11 (SVN):
    * engine, zone.c: Use memcpy instead of strcpy in Hunk_Strdup() and
      Z_Strdup().
    * utils, qbsp.c: Minor cleanup in MakeProjectPath().

2012-06-11 (SVN):
    * libs/common/filenames.h: For __cplusplus, added overloaded cases
      of FIND_FIRST_DIRSEP and FIND_LAST_DIRSEP inlines, i.e. char* vs.
      const char*, so that it compiles using g++>=4.4 against string.h
      from newer glibc versions (__CORRECT_ISO_CPP_STRING_H_PROTO).
      Added FIXME notes to the DOS-ish versions regarding semi-absolute
      paths like C:FOO.

2012-06-11 (SVN):
    * engine/h2shared/common.c: Used the IS_DIR_SEPARATOR() macro in
      COM_SkipPath(). Changed the COM_FileBase() helper to simply do
      COM_StripExtension(COM_SkipPath(in),out,outsize).
    * engine, cl_parse.c (CL_ParseServerInfo): When copying the naked
      map file name to cl.mapname, changed it to use COM_FileBase().

2012-06-11 (SVN):
    * utils, hcc.c: If -src is specified, add a trailing slash only if